feat: update post, imageUploader, recipes page

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -21,5 +21,6 @@ h6 {
   --color-primary: #4caf50;
   --color-hprimary: #45a049;
   --color-secondary: #ff8f3a;
+  --color-hsecondary: #ff7a1c;
   --color-accent: #ffda5a;
 }
